--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features=["json"]}
+diacritics = "0.2.0"
+rocket = { version = "0.5.0-rc.2", features=["json", "serde_json"]}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+[dependencies.rocket_contrib]
+version = "0.4.10"
+default-features = false
+features = ["serve"]
