--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 diacritics = "0.2.0"
+js-sys = "0.3.64"
+wasm-bindgen = "0.2.87"
+web-sys = "0.3.64"
 yew = { version = "0.20.0", features = ["csr"] }
