--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ members = [
     "common",
     "frontend",
 ]
+
+[workspace.metadata.leptos]
+name = "leptos-project"
+bin-package = "backend"
+lib-package = "frontend"
