--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-rt = "2.8.0"
-actix-web = "4.3.1"
+axum = "0.6.18"
+clap = { version = "4.3.9", features = ["derive"] }
+log = "0.4.19"
+tokio = { version = "1.29.1", features = ["full"] }
+tower = "0.4.13"
+tower-http = { version = "0.4.1", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
