--- a/questions/Cargo.toml
+++ b/questions/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "common"
+name = "questions"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diacritics = "0.2.0"
