--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,16 @@
-[workspace]
-members = [
-    "common",
-    "web",
-]
+[package]
+name = "counters"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+leptos = { version = "0.4.1", features = ["csr", "nightly"]  }
+log = "0.4"
+console_log = "1"
+console_error_panic_hook = "0.1.7"
+questions = {path = "./questions"}
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.0"
+wasm-bindgen = "0.2"
+web-sys = "0.3"
